; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_nsevents.c_init_event.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_nsevents.c_init_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"AddEventTarget failed: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32)* @init_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_event(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @nsAString_InitDepend(i32* %9, i32* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* @FALSE, align 4
  %17 = call i32 @nsIDOMEventTarget_AddEventListener(i32* %13, i32* %9, i32* %14, i32 %15, i32 %16, i32 1)
  store i32 %17, i32* %10, align 4
  %18 = call i32 @nsAString_Finish(i32* %9)
  %19 = load i32, i32* %10, align 4
  %20 = call i64 @NS_FAILED(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @ERR(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %23)
  br label %25

25:                                               ; preds = %22, %4
  ret void
}

declare dso_local i32 @nsAString_InitDepend(i32*, i32*) #1

declare dso_local i32 @nsIDOMEventTarget_AddEventListener(i32*, i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @nsAString_Finish(i32*) #1

declare dso_local i64 @NS_FAILED(i32) #1

declare dso_local i32 @ERR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
